--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <html>
     <h1>スケジュール</h1>
-    <p>7月6日土曜日はBTSのコンサートです。</p>
+    <p>7月6日土曜日はBTSのコンサートです。新曲「light」も公開され、披露されることが予測できる。非常に楽しみである。
+    </p>
 </html>
